--- a/style.css
+++ b/style.css
@@ -109,3 +109,29 @@ iframe{
   width: 400px;
   margin: 40px auto 20px;
 }
+#cover{
+  width: 100px;
+  height: 100px;
+  border-radius: 4px;
+}
+.song-container {
+  width: 400px;
+  margin: 0 50px;
+  padding: 10px;
+  display: flex;
+  align-items: center;  
+  background: #FCFCFC;
+  color: #000000;
+  border-radius: 10px;
+}
+
+.song-details {
+  flex-grow: 1;
+  margin-left: 10px;
+}
+
+audio {
+  width: 100%;  
+  margin-top: 10px;
+  margin-left: 0;
+}
